# qa-specs

./: .gitreview  .zuul.yaml  CONTRIBUTING.rst  README.rst  cgitrc  requirements.txt  run_tests.sh  setup.cfg  template.rst  tox.ini
doc/source/: conf.py  index.rst  template.rst
specs/: add-basic-ceilometer-tests.rst  add-ceilometer-scenario-tests.rst  add-service-tags.rst  api-schema-unification.rst  autogen-negative-tests.rst  barbican-api-tests.rst  branchless-tempest-extensions.rst  cinder-v2-api-tests.rst  cli-tests-coverage.rst  clients-return-one-value.rst  config-verification.rst  consistent-service-method-names.rst  ipv6-api-testing-parity.rst  ipv6-subnet-attributes.rst  javelin2.rst  more-selectable-swift-tests.rst  multi-keystone-api-version-tests.rst  neutron-advanced-scenarios.rst  nova-api-test-inheritance.rst  post-run-cleanup.rst  resource-cleanup.rst  stress-api-tracking.rst  tempest-library.rst  test-accounts-continued.rst  test-accounts.rst  trove-api-tests.rst
specs/devstack/: counter-inspection.rst  devstack-external-plugins.rst
specs/implemented/: add-service-tags.rst  branchless-tempest.rst  cinder-v2-api-tests.rst  client-checks-success.rst  minversion-check-for-cli-tests.rst  rearrange-nova-response-schemas.rst  tempest-client-scenarios.rst
specs/other/: whitebox-tempest-plugin.rst
specs/tempest/: client-manager-refactor.rst  consistent-service-method-names.rst  ddt-testing.rst  fuzzy-test.rst  keystone-v3-jobs.rst  method-return-value-and-move-service-clients-to-lib.rst  reintegrate-tempest-lib.rst  (+5 more)
tools/: rstcheck.py
(+19 files in other folders)
